# vk3d

./: .gitmodules  CMakeLists.txt
assets/shaders/: cube.vert  cube.vert.spv
include/: config.h  game.h  jolt.h  pipeline.h  sdl.h  util.h  vkFunctions.h  vkInit.h
scripts/: generateVkFunctions.bat  generateVkFunctions.py
src/: game.c  garbage.c  jolt.cpp  main.c  pipeline.c  sdl.c  util.c  vkFunctions.c  vkInit.c
